Fix remove button on IEF

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -1334,7 +1334,7 @@ input.field-add-more-submit {
   }
 }
 
-.ief-entity-operations {
+tr.ief-row-entity .ief-entity-operations {
   input.button-remove {
     position: relative;
     transform: none;
